--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,164 @@
-django>=1.11,<1.12
+alabaster==0.7.9
+altgraph==0.14
+anaconda-client==1.6.0
+anaconda-navigator==1.5
+anaconda-project==0.4.1
+astroid==1.4.9
+astropy==2.0.1
+Babel==2.3.4
+backports.shutil-get-terminal-size==1.0.0
+beautifulsoup4==4.5.3
+bitarray==0.8.1
+blaze==0.10.1
+bokeh==0.12.13
+boto==2.45.0
+Bottleneck==1.2.1
+cffi==1.9.1
+chardet==2.3.0
+chest==0.2.3
+click==6.7
+cloudpickle==0.2.2
+clyent==1.2.2
+colorama==0.3.7
+conda==4.4.8
+configobj==5.0.6
+contextlib2==0.5.4
+cryptography==1.7.1
+cycler==0.10.0
+Cython==0.25.2
+cytoolz==0.8.2
+dask==0.13.0
+datashape==0.5.4
+decorator==4.0.11
+dill==0.2.5
+Django==2.0.7
 django-debug-toolbar==1.8
+django-el-pagination==3.0.1
+django-markdown-deux==1.0.5
+django-pagedown==1.0.4
+django-simple-blog==0.2.1
+django-simple-math-captcha==1.0.7
+docutils==0.13.1
+et-xmlfile==1.0.1
+fastcache==1.0.2
+Flask==0.12
+Flask-Cors==3.0.2
+future==0.16.0
+gevent==1.2.1
+greenlet==0.4.11
 gunicorn==19.4.5
-psycopg2==2.7.3.1
-whitenoise==3.3.1
+h5py==2.7.0
+HeapDict==1.0.0
+idna==2.2
+imagesize==0.7.1
+ipykernel==4.6.1
+ipython==5.1.0
+ipython-genutils==0.1.0
+ipywidgets==5.2.2
+isort==4.2.5
+itsdangerous==0.24
+jdcal==1.3
+jedi==0.9.0
+Jinja2==2.9.4
+jsonschema==2.5.1
+jupyter==1.0.0
+jupyter-client==4.4.0
+jupyter-console==5.0.0
+jupyter-core==4.2.1
+lazy-object-proxy==1.2.2
+llvmlite==0.20.0
+locket==0.2.0
+lxml==3.7.2
+macholib==1.8
+markdown2==2.3.5
+MarkupSafe==0.23
+Mathics==1.0
+matplotlib==2.0.2
+mistune==0.7.3
+mpmath==0.19
+multipledispatch==0.4.9
+nbconvert==4.2.0
+nbformat==4.2.0
+networkx==1.11
+nltk==3.2.2
+nose==1.3.7
+notebook==4.3.1
+numba==0.35.0
+numexpr==2.6.2
+numpy==1.13.1
+numpydoc==0.6.0
+odo==0.5.0
+olefile==0.45.1
+openpyxl==2.4.1
+pandas==0.20.3
+partd==0.3.7
+pathlib2==2.2.0
+patsy==0.4.1
+pefile==2017.9.3
+pep8==1.7.0
+pexpect==4.2.1
+pickleshare==0.7.4
 Pillow==4.0.0
+ply==3.9
+prompt-toolkit==1.0.9
+psutil==5.0.1
+psycopg2==2.7.3.1
+ptyprocess==0.5.1
+py==1.4.32
+pyasn1==0.1.9
+pycosat==0.6.3
+pycparser==2.17
+pycrypto==2.6.1
+pycurl==7.43.0
+pyflakes==1.5.0
+Pygments==2.1.3
+PyJWT==1.6.1
+pylint==1.6.4
+pyOpenSSL==16.2.0
+pypandoc==1.4
+pyparsing==2.1.4
+PySocks==1.6.8
+pytest==3.0.5
+python-dateutil==2.6.0
+pytz==2016.10
+PyWavelets==0.5.2
+PyYAML==3.12
+pyzmq==16.0.2
+QtAwesome==0.4.3
+qtconsole==4.2.1
+QtPy==1.2.1
+redis==2.10.5
+requests==2.12.4
+rope-py3k==0.9.4.post1
+scikit-image==0.13.0
+scikit-learn==0.19.0
+scipy==0.19.1
+seaborn==0.7.1
+simplegeneric==0.8.1
+singledispatch==3.4.0.3
+six==1.10.0
+snowballstemmer==1.2.1
+sockjs-tornado==1.0.3
+South==1.0.2
+Sphinx==1.5.1
+spyder==3.1.2
+SQLAlchemy==1.1.5
+sqlparse==0.2.4
+statsmodels==0.8.0
+sympy==1.0
+tables==3.4.2
+terminado==0.6
+toolz==0.8.2
+tornado==4.4.2
+traitlets==4.3.1
+twilio==6.11.0
+unicodecsv==0.14.1
+virtualenv==16.0.0
+wcwidth==0.1.7
+Werkzeug==0.11.15
+whitenoise==3.3.1
+widgetsnbextension==1.2.6
+wrapt==1.10.8
+xlrd==1.0.0
+XlsxWriter==0.9.6
+xlwt==1.2.0
